<resources>
    <string name="app_name">WorkNow</string>
    <string name="title_activity_tab_users">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_onprogress">En Progreso</string>
    <string name="title_registeroffers">Registro de Solicitud</string>
    <string name="title_publications">Publicaciones</string>
    <string name="title_profile">Mi Perfil</string>
    <string name="title_history_offers">Historial de Solicitudes</string>
    <string name="title_comments">Comentarios</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="title_logout">Cerrar Sesión</string>
    <string name="title_complete_register">Complete el registro</string>
    <string name="msgerrorusuario">Error al crear el usuario</string>
    <string name="msgerroriniciosesion">Error al iniciar sesión.</string>
</resources>