<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard_prof">

    <fragment
        android:id="@+id/navigation_dashboard_prof"
        android:name="com.uisrael.worknow.Views.TabsFragments.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_publications_prof"
        android:name="com.uisrael.worknow.Views.TabsFragments.PublicationsFragment"
        android:label="@string/title_publications"
        tools:layout="@layout/fragment_offersregister" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.uisrael.worknow.Views.ProfileUserFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_user_fragment" />

    <fragment
        android:id="@+id/navigation_inprogress_prof"
        android:name="com.uisrael.worknow.Views.TabsFragments.InProgressFragment"
        android:label="@string/title_onprogress"
        tools:layout="@layout/fragment_inprogress" />
</navigation>